Setup notification commands
Following notification have been setup
- error notification
- warning  notification
- information notification

--- a/package.json
+++ b/package.json
@@ -18,6 +18,18 @@
       {
         "command": "vsus.helloWorld",
         "title": "Hello World"
+      },
+      {
+        "command": "vsus.showInfoNotification",
+        "title": "Information Notification"
+      },
+      {
+        "command": "vsus.showWarningNotification",
+        "title": "Warning Notification"
+      },
+      {
+        "command": "vsus.showErrorNotification",
+        "title": "Error Notification"
       }
     ]
   },
