--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
       {
         "command": "vsus.createCPPProject",
         "title": "Create Project: C++"
+      },
+      {
+        "command": "vsus.createReactProject",
+        "title": "Create Project: React"
       }
     ]
   },
