--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
         "title": "Hello World"
       },
       {
-        "command": "vsus.createCPPProject",
-        "title": "Create Project: C++"
+        "command": "vsus.createdjangoProject",
+        "title": "Create Project: djnago"
       }
     ]
   },
