--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
       },
       {
         "command": "vsus.createdjangoProject",
-        "title": "Create Project: djnago"
+        "title": "Create Project: django"
       }
     ]
   },
