Removed test folder and changed startup command and notification

--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
         "title": "Error Notification"
       },
       {
-        "command": "vsus.helloWorld",
-        "title": "Hello World"
+        "command": "vsus.startup",
+        "title": "VSUS"
       },
       {
         "command": "vsus.createCProject",
