--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "displayName": "VSUS",
   "publisher": "VSUS",
   "description": "",
-  "version": "0.0.1",
+  "icon": "VSUSlogo.png",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Rajendrakhanal/vsus"
+  },
+  "version": "0.0.2",
   "engines": {
     "vscode": "^1.74.0"
   },
