--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vsus",
   "displayName": "VSUS",
   "publisher": "VSUS",
-  "description": "",
+  "description": "Feel the VSUS, Fall for VSUS ",
   "icon": "VSUSlogo.png",
   "repository": {
     "type": "git",
