Added coomand create project and a file named createProject was made in projects

--- a/package.json
+++ b/package.json
@@ -60,6 +60,10 @@
       {
         "command": "askVSUS.start",
         "title": "AskVSUS"
+      },
+      {
+        "command": "createProject.start",
+        "title": "Create Project"
       }
     ],
     "snippets": [
