--- a/package.json
+++ b/package.json
@@ -190,13 +190,79 @@
         }
       ],
       "configuration": {
-        "title": "AskVSUS",
+        "title": "askVSUS",
         "type": "object",
         "properties": {
           "askVSUS.apiKey": {
             "type": "string",
             "markdownDescription": "API key from [OpenAI](https://beta.openai.com/account/api-keys)",
             "order": 0
+          },
+          "askVSUS.model": {
+            "type": "string",
+            "enum": [
+              "text-davinci-003",
+              "text-curie-001",
+              "code-davinci-002",
+              "code-cushman-002"
+            ],
+            "default": "text-davinci-003",
+            "description": "Which GPT3 model to use",
+            "order": 1
+          },
+          "askVSUS.maxTokens": {
+            "type": "number",
+            "default": 500,
+            "description": "Maximum number of tokens inside response per request",
+            "order": 2
+          },
+          "askVSUS.temperature": {
+            "type": "number",
+            "default": 0.7,
+            "description": "Temperature to use for the GPT3 (between 0 (conservative) and 1 (creative))",
+            "order": 3
+          },
+          "askVSUS.pasteOnClick": {
+            "type": "boolean",
+            "default": true,
+            "description": "Paste the code from a codeblock inside the response into the editor when you click on it",
+            "order": 4
+          },
+          "askVSUS.promptPrefix.explain": {
+            "type": "string",
+            "default": "Explain what this code does: ",
+            "description": "The prompt prefix used for explaining the selected code",
+            "order": 5
+          },
+          "askVSUS.promptPrefix.refactor": {
+            "type": "string",
+            "default": "Refactor this code and then explain what's changed: ",
+            "description": "The prompt prefix used for refactoring the selected code",
+            "order": 6
+          },
+          "askVSUS.promptPrefix.findProblems": {
+            "type": "string",
+            "default": "Find problems with the following code, fix them and explain what was wrong (Do not change anything else, if there are no problems say so): ",
+            "description": "The prompt prefix used for finding problems in the selected code",
+            "order": 7
+          },
+          "askVSUS.promptPrefix.optimize": {
+            "type": "string",
+            "default": "Optimize the following code if there is anything to improve, if not say so: ",
+            "description": "The prompt prefix used for optimizing the selected code",
+            "order": 8
+          },
+          "askVSUS.promptPrefix.documentation": {
+            "type": "string",
+            "default": "Write documentation for the following code: ",
+            "description": "The prompt prefix used for writing documentation for the selected code",
+            "order": 9
+          },
+          "askVSUS.selectedInsideCodeblock": {
+            "type": "boolean",
+            "default": true,
+            "description": "Append selected code as a codeblock (```...code...```) instead of plain text",
+            "order": 10
           }
         }
       }
@@ -206,7 +272,7 @@
         {
           "id": "askVSUS",
           "title": "askVSUS",
-          "icon": "./VSUSlogo.png"
+          "icon": "resources/try.svg"
         }
       ]
     },
